--- a/doc/source/api/core/settings/v231.rst
+++ b/doc/source/api/core/settings/v231.rst
@@ -12,26 +12,22 @@ various aspects of setting up and solving an analysis.
 
 The API is defined in terms of a number of generic objects which will be described.
 
+**TODO** This has been adapted/cut down from Fluent docs. Needs more customising for SyC differences
+as well as expansion in places.
 
-**TODO** The following Fluent doc may be adaptable to System Coupling as the latter uses a
-stripped down/slightly diverged form of the Fluent infrastructure. Obviously specific examples
-need adjusting to SyC examples.
-
+**Q** Should we draw attention to similarities with Fluent, or should we change implementation object names to make them more distinct.
 
 Top-level Objects
 -----------------
 
-The top-level settings object is available as the ``root`` property of session.solver.
+The commands and settings API is accessible via the top-level attributes of the ``Analysis`` class,
+``case``, ``setup``, and ``solution``.
 
 .. code-block::
 
-  >>> import ansys.fluent.core as pyfluent
-  >>> session = pyfluent.launch_fluent()
-  >>> root = session.solver.root
-
-The root object contains attributes such as ``file``, ``setup``,
-``solution`` and ``results``.  These objects are also instances of 'settings'
-objects and roughly mirror the outline view in Fluent.
+  >>> import ansys.systemcoupling.core as pysystemcoupling
+  >>> analysis = pysystemcoupling.launch()
+  >>> setup = analysis.setup
 
 Types of Settings Objects
 -------------------------
@@ -39,68 +35,33 @@ Types of Settings Objects
 A settings object can be one of the primitive types like ``Integer``, ``Real``,
 ``String`` and ``Boolean`` or a container object.
 
-There are three types of container objects: ``Group``, ``NamedObject`` and
-``ListObject``.
+There are two types of container objects: ``Group`` and ``NamedObject``.
 
 A ``Group`` object is a static container with pre-defined child objects which
-can be accessed via attribute access. For example, ``setup.models.energy``
-refers to the ``energy`` child of ``models`` child of the ``setup`` object. The
+can be accessed via attribute access. For example, ``setup.output_control.results``
+refers to the ``results`` child of ``output_control`` child of the ``setup`` object. The
 names of the child objects of a group can be accessed with the ``child_names``
 attribute of a ``Group`` object.
 
 A ``NamedObject`` is a container holding dynamically created named objects of
 its specified child type (accessible via ``child_object_type`` attribute)
-similar to a dictionary. A specified named object can be accessed using the
+similar to a dictionary. A specific named object can be accessed using the
 index operator. For example,
-``root.setup.boundary_conditions.velocity_inlet['inlet2']`` refers to the
-``velocity_object`` object with name ``inlet2``. The current list of named
+``setup.coupling_interface['intf-1']`` refers to the
+``coupling_interface`` object with name ``intf-1``. The current list of named
 object children can be accessed with the ``get_object_names()`` function of the
 container class.
-
-A ``ListObject`` is a container holding dynamically created unnamed objects of
-its specified child type (accessible via ``child_object_type`` attribute) in a
-list. Children of ``ListObject`` can be accessed using the index operator. For
-example,
-``root.setup.cell_zone_conditions.fluid['fluid-1'].source_terms['mass'][2]``
-refers to the third (starting from index 0) mass source entry for the fluid zone
-named ``fluid-1``. The current number of child objects can be accessed via the
-``get_size()`` function.
 
 
 Setting and Modifying State
 ---------------------------
 
 The state of any object can be accessed by "calling" it. For container objects,
-this will return the state of the children as a dictionary (for ``Group`` and
-``NamedObject`` types) or a list (for ``ListObject``) types:
-
-.. code-block::
-
-  >>> root.setup.models.viscous.model()
-  'k-epsilon-standard'
-
-.. code-block::
-
-  >>> from pprint import pprint
-  >>> pprint (root.setup.models.energy())
-  {'enabled': True,
-   'inlet_diffusion': True,
-   'kinetic_energy': False,
-   'pressure_work': False,
-   'viscous_dissipation': False}
-  >>> root.setup.boundary_conditions.velocity_inlet['inlet1'].vmag.constant()
-  10.0
+this will return the state of the children as a dictionary.
 
 To modify the state of any object, you could assign the corresponding attribute
 in its parent object. This assignment could be done at any level. For ``Group``
-and ``NamedObject`` type objects, the state value will be a dictionary, and for
-``ListObject`` type objects, the state value will be a list.
-
-.. code-block::
-
-  >>> root.setup.models.viscous.model = 'laminar'
-  >>> root.setup.models.energy = { 'enabled' : False }
-  >>> root.setup.boundary_conditions.velocity['inlet1'].vmag.constant = 14
+and ``NamedObject`` type objects, the state value will be a dictionary.
 
 The state of an object can also be accessed via the ``get_state`` method, and
 modified via the ``set_state`` method.
@@ -108,40 +69,12 @@ modified via the ``set_state`` method.
 The current state can also be printed in a simple text format with the
 ``print_state`` method. For example, the following
 
-.. code-block::
-
-  >>> root.setup.models.print_state()
-
-gives the following output:
-
-.. code-block::
-
-  viscous :
-    k_epsilon_model : standard
-    near_wall_treatment : standard-wall-fn?
-    model : k-epsilon-standard
-    options :
-      viscous_heating : False
-      curvature_correction : False
-      production_kato_launder : False
-      production_limiter : False
-  energy :
-    enabled : True
-    pressure_work : False
-    viscous_dissipation : False
-    inlet_diffusion : True
-    kinetic_energy : False
-  multiphase :
-    number_of_phases : 0
-    models : none
 
 Commands
 --------
 
 Commands are methods of settings objects that are used to modify the state of
-the application. For example, the ``hybrid_initialize()`` method of
-``solution.initialization`` initializes the solution using the hybrid
-initialization method. The ``command_names`` attribute of a settings object
+the application. For example, ... The ``command_names`` attribute of a settings object
 provides the names of its commands.
 
 If needed, commands can be passed keyword arguments, and the list of valid
@@ -152,20 +85,12 @@ and can be either primitive type or container type.
 Additional Metadata
 -------------------
 
-Settings objects have some additional metadata which can be accessed using the
-``get_attr`` and ``get_attrs`` methods. For example, the list of allowed values
-at a particular state for the viscous model can be accessed as follows:
-
-.. code-block::
-
-  >>> root.setup.models.viscous.model.get_attr('allowed-values')
-  ['inviscid', 'laminar', 'k-epsilon-standard', 'k-omega-standard', 'mixing-length', 'spalart-allmaras', 'k-kl-w', 'transition-sst', 'reynolds-stress', 'scale-adaptive-simulation', 'detached-eddy-simulation', 'large-eddy-simulation']
-
-Attributes are dynamic and the values can change depending on the application
-state.
+**Unused in System Coupling.**
 
 Active Objects and Commands
 ---------------------------
+
+** Unimplemented in System Coupling **
 
 Objects and commands can be active or inactive based on the application state.
 application. The ``is_active()`` method returns ``True`` if an object or command
