don't build Sphinx Gallery by default

--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -418,7 +418,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Run solution\n\nAccess `solve` via the `solution` API.\n\n"
+        "# Run solution\n\nThe System Coupling server's stdout/stderr output is not shown\nin PySystemCoupling by default. We must turn on output\nstreaming if we want to see it:\n\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "syc.start_output()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Access `solve` via the `solution` API.\n\n"
       ]
     },
     {
