example tweaks; make gallery integration work on GH build

--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -256,7 +256,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Change `time_step_size` setting:\n\n"
+        "Change ``time_step_size`` setting:\n\n"
       ]
     },
     {
@@ -292,7 +292,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Change `end_time`:\n\n"
+        "Change ``end_time``:\n\n"
       ]
     },
     {
@@ -310,7 +310,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "View `output_control`:\n\n"
+        "View ``output_control``:\n\n"
       ]
     },
     {
@@ -328,7 +328,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Set `option` in `output_control`. First, see valid options:\n\n"
+        "Set ``option`` in ``output_control``. First, see valid options:\n\n"
       ]
     },
     {
@@ -364,7 +364,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "View `output_control` again:\n\n"
+        "Change ``output_frequency``:\n\n"
       ]
     },
     {
@@ -375,7 +375,25 @@
       },
       "outputs": [],
       "source": [
-        "setup.output_control.print_state()\n\n# Change `output_frequency`:\nsetup.output_control.output_frequency = 2"
+        "setup.output_control.output_frequency = 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "View ``output_control`` again:\n\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "setup.output_control.print_state()"
       ]
     },
     {
@@ -418,7 +436,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Run solution\n\nThe System Coupling server's stdout/stderr output is not shown\nin PySystemCoupling by default. We must turn on output\nstreaming if we want to see it:\n\n"
+        "# Run solution\n\nThe System Coupling server's ``stdout``/``stderr`` output is not shown\nin PySystemCoupling by default. We must turn on output\nstreaming if we want to see it:\n\n"
       ]
     },
     {
@@ -436,7 +454,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Access `solve` via the `solution` API.\n\n"
+        "Access ``solve`` via the ``solution`` API.\n\n"
       ]
     },
     {
@@ -454,7 +472,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Extend analysis end time for a restarted run\n\nAccess the `case` API for file handling and persistence.\nUse this to completely clear the current case and reload\nfrom the case saved during the solve.\n\n"
+        "# Extend analysis end time for a restarted run\n\nAccess the ``case`` API for file handling and persistence.\nUse this to completely clear the current case and reload\nfrom the one saved during the solve.\n\n"
       ]
     },
     {
@@ -472,7 +490,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Extend analysis\n\nView `solution_control`, change `end-time` and verify setting.\nThe analysis is extended to 1.5 seconds.\n\n"
+        "## Extend analysis\n\nView ``solution_control``, change ``end-time`` and verify setting.\nThe analysis is extended to 1.5 seconds.\n\n"
       ]
     },
     {
@@ -508,7 +526,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Change `convergence_target` and `ramping_option` of \"Force\" data\ntransfer, and set minimum iterations value.\n\n"
+        "Change some settings of the \"Force\" data transfer, and increase the\nminimum iterations value in ``solutions_control`` from its default\nvalue of 1.\n\n"
       ]
     },
     {
