initial candidate version of param sweep sphinx gallery example

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -105,7 +105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### ``extract_max_displacement``\nQuery the MAPDL results for the maximum displacement\nvalue in the solution.\n\n"
+        "### ``extract_max_displacement``\nUse PyDPF to query the MAPDL results for the maximum displacement\nvalue in the solution.\n\n"
       ]
     },
     {
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "def plot(x, y):\n  fig, ax = plt.subplots()\n  ax.plot(x, y, \"-o\")\n  ax.set(\n    xlabel=\"Inlet velocity [m/s]\",\n    ylabel='Max Displacement [m]',\n    title=\"Plate max displacement vs. inlet velocity\")\n  ax.grid()\n  #plt.show()\n  plt.savefig(\"displacement\")"
+        "def plot(working_dir, x, y):\n  fig, ax = plt.subplots()\n  ax.plot(x, y, \"-o\")\n  ax.set(\n    xlabel=\"Inlet velocity [m/s]\",\n    ylabel='Max Displacement [m]',\n    title=\"Plate max displacement vs. inlet velocity\")\n  ax.grid()\n  plt.savefig(os.path.join(working_dir, \"displacement\"))"
       ]
     },
     {
@@ -170,7 +170,7 @@
       },
       "outputs": [],
       "source": [
-        "#x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\nx = np.array([5.0, 10.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(x, y)"
+        "x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
       ]
     }
   ],
