sphinx gallery config tweak update; applied to regenerated examples

--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -19,17 +19,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "# sphinx_gallery_thumbnail_path = '_static/oscplate_displacement.png'"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -134,7 +123,7 @@
       },
       "outputs": [],
       "source": [
-        "setup.add_participant(input_file=\"mapdl.scp\")\nsetup.add_participant(input_file=\"fluent.scp\")"
+        "mapdl_part_name = setup.add_participant(input_file=\"mapdl.scp\")\nfluent_part_name = setup.add_participant(input_file=\"fluent.scp\")"
       ]
     },
     {
@@ -170,7 +159,7 @@
       },
       "outputs": [],
       "source": [
-        "interface_name = \"interface-1\"\ninterface = setup.coupling_interface.create(interface_name)\ninterface.side[\"One\"].coupling_participant = \"MAPDL-1\"\ninterface.side[\"One\"].region_list = [\"FSIN_1\"]\ninterface.side[\"Two\"].coupling_participant = \"FLUENT-2\"\ninterface.side[\"Two\"].region_list = [\"wall_deforming\"]\n\n# Use commands to add data transfers\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
+        "interface_name = \"interface-1\"\ninterface = setup.coupling_interface.create(interface_name)\ninterface.side[\"One\"].coupling_participant = mapdl_part_name\ninterface.side[\"One\"].region_list = [\"FSIN_1\"]\ninterface.side[\"Two\"].coupling_participant = fluent_part_name\ninterface.side[\"Two\"].region_list = [\"wall_deforming\"]\n\n# Use commands to add data transfers\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
       ]
     },
     {
@@ -526,7 +515,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Change some settings of the \"Force\" data transfer, and increase the\nminimum iterations value in ``solutions_control`` from its default\nvalue of 1.\n\n"
+        "Change a setting in the \"Force\" data transfer, and increase the\nminimum iterations value in ``solutions_control`` from its default\nvalue of 1.\n\n"
       ]
     },
     {
@@ -537,7 +526,7 @@
       },
       "outputs": [],
       "source": [
-        "force_transfer.convergence_target = 0.001\nforce_transfer.ramping_option = \"Linear\"\n\nsetup.solution_control.minimum_iterations = 2"
+        "force_transfer.convergence_target = 0.001\n\nsetup.solution_control.minimum_iterations = 2"
       ]
     },
     {
@@ -618,7 +607,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
