--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -227,7 +227,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Modify settings\n\nView contents of `solution_control`. Notice that\n``time_step_size`` and ``end_time`` are unset,\nconsistent with what was shown in the status messages.\nValues shown in the ``print_state`` output as ``<None>``\nactually have Python values of ``None``.\n\n"
+        "### Modify settings\n\nView contents of ``solution_control``. Notice that\n``time_step_size`` and ``end_time`` are unset,\nconsistent with what was shown in the status messages.\nValues shown in the ``print_state`` output as ``<None>``\nactually have Python values of ``None``.\n\n"
       ]
     },
     {
@@ -587,7 +587,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<div class=\"alert alert-info\"><h4>Note</h4><p>This `syc` object is now \"defunct\" and any attempt to\n   use it to perform any further actions will yield an error. To do\n   more in the current Python session, create a new syc instance\n   using ``syc = pysystemcoupling.launch()`` again.)</p></div>\n\n"
+        "<div class=\"alert alert-info\"><h4>Note</h4><p>This ``syc`` object is now \"defunct\" and any attempt to\n   use it to perform any further actions will yield an error. To do\n   more in the current Python session, create a new ``syc`` instance\n   using ``syc = pysystemcoupling.launch()`` again.)</p></div>\n\n"
       ]
     }
   ],
