--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -51,7 +51,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Define functions\nThis example is broken into functions that define the main steps that\nneed to be performed. It makes particular sense to do this for the\nmain task of running a coupled analysis as that needs to be repeated\nfor multiple values of a single input parameter. This is encapsulated\nin ``get_max_displacement``. In turn, this is broken into further\nfunctions that represent its main steps. We also define a function that prepares our\nworking directory (``setup_working_directory``) and one that plots the final\nresults (``plot``).\n\n### ``setup_working_directory``\nSet up the working directory with downloaded\ndata files for this example. The Mapdl files will be placed in a\nsub-directory Mapdl of the working directory and the Fluent files\nin a sub-directory Fluent.\n\nThe function returns the path of the working directory for later use.\n\n"
+        "## Define functions\nThis example is broken into functions that define the main steps that\nneed to be performed. It makes particular sense to do this for the\nmain task of running a coupled analysis as that needs to be repeated\nfor multiple values of a single input parameter. This is encapsulated\nin ``get_max_displacement``. In turn, this is broken into further\nfunctions that represent its main steps. We also define a function that prepares our\nworking directory (``setup_working_directory``) and one that plots the final\nresults (``plot``).\n\n### ``setup_working_directory``\nSet up the working directory with downloaded\ndata files for this example. The MAPDL files will be placed in a\nsub-directory MAPDL of the working directory and the Fluent files\nin a sub-directory Fluent.\n\nThe function returns the path of the working directory for later use.\n\n"
       ]
     },
     {
@@ -190,7 +190,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
