fix doc errors notified by valeh

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -58,7 +58,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### ``set_inlet_velocity``\nModify the Fluent case to adjust the\ninlet velocity on the `\"wall_inlet\"` velocity inlet boundary\ncondition. This function will be called with a varying ``inlet_velocity``\nparameter before each call of ``solve_coupled_analysis`` in\na sequence of analyses.\n\n"
+        "### ``set_inlet_velocity``\nModify the Fluent case to adjust the\ninlet velocity on the ``\"wall_inlet\"`` velocity inlet boundary\ncondition. This function will be called with a varying ``inlet_velocity``\nparameter before each call of ``solve_coupled_analysis`` in\na sequence of analyses.\n\n"
       ]
     },
     {
