Add doc style check (#68)
* prevent concurrent builds; try running 'doc-style' job

* add vale.ini

* add initial SyC vocab

* fix vocab dir structure

* some vale cleanups

* regenerated Sphinx Gallery examples

* fix typo

* fix doc errors notified by vale

* fix doc errors notified by valeh

* try alert on warning

* switch warnings back on; first pass at eliminating them

* fix remaining warnings from first pass fix

* spotted a small inconsistency

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -22,7 +22,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Perform required imports\nIn addition to the PySystemCoupling package, we also need to import PyFluent\nand PyDPF for this example. In addition, facilities from `matplotlib` and\n`numpy` are used to produce a simple plot of our results.\n\n"
+        "## Perform required imports\nAs well as the PySystemCoupling package, PyFluent and PyDPF also need\nto be imported for this example. In addition, facilities from ``matplotlib`` and\n``numpy`` are used to produce a simple plot of the results.\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Define functions\nThis example is broken into functions that define the main steps that\nneed to be performed. It makes particular sense to do this for the\nmain task of running a coupled analysis as that needs to be repeated\nfor multiple values of a single input parameter. This is encapsulated\nin ``get_max_displacement``. In turn, this is broken into further\nfunctions that represent its main steps. We also define a function that prepares our\nworking directory (``setup_working_directory``) and one that plots the final\nresults (``plot``).\n\n### ``setup_working_directory``\nSet up the working directory with downloaded\ndata files for this example. The Mapdl files will be placed in a\nsub-directory Mapdl of the working directory and the Fluent files\nin a sub-directory Fluent.\n\nThe function returns the path of the working directory for later use.\n\n"
+        "## Define functions\nThis example is broken into functions that define the main steps that\nneed to be performed. It makes particular sense to do this for the\nmain task of running a coupled analysis as that needs to be repeated\nfor multiple values of a single input parameter. This is encapsulated\nin ``get_max_displacement``. In turn, this is broken into further\nfunctions that represent its main steps. Also, define a function that prepares the\nworking directory (``setup_working_directory``) and one that plots the final\nresults (``plot``).\n\n### ``setup_working_directory``\nSet up the working directory with downloaded\ndata files for this example. The MAPDL files are placed in a\nsub-directory MAPDL of the working directory and the Fluent files\nin a sub-directory Fluent.\n\nThe function returns the path of the working directory for later use.\n\n"
       ]
     },
     {
@@ -58,7 +58,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### ``set_inlet_velocity``\nModify the Fluent case to adjust the\ninlet velocity on the `\"wall_inlet\"` velocity inlet boundary\ncondition. This function will be called with a varying ``inlet_velocity``\nparameter before each call of ``solve_coupled_analysis`` in\na sequence of analyses.\n\n"
+        "### ``set_inlet_velocity``\nModify the Fluent case to adjust the\ninlet velocity on the ``\"wall_inlet\"`` velocity inlet boundary\ncondition. This function is called with a varying ``inlet_velocity``\nparameter before each call of ``solve_coupled_analysis`` in\na sequence of analyses.\n\n"
       ]
     },
     {
@@ -112,7 +112,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### ``get_max_displacement``\nUse the functions defined above to:\n\n- Modify the Fluent input file to apply the provided ``inlet_velocity`` setting.\n- Run the coupled analysis based on that setting.\n- Extract and return the maximum displacement value from the MAPDL results.\n\n"
+        "### ``get_max_displacement``\nUse the previously defined functions to:\n\n- Modify the Fluent input file to apply the provided ``inlet_velocity`` setting.\n- Run the coupled analysis based on that setting.\n- Extract and return the maximum displacement value from the MAPDL results.\n\n"
       ]
     },
     {
@@ -148,7 +148,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Run the analyses\nUse the ``get_max_displacement`` function sequentially, with input\nvelocity values provided by an initialized ``x`` array.\nThe results of the ``get_max_displacement`` calls are used to fill in the\ncorresponding values of the ``y`` array. Finally, we can call\nthe ``plot`` function to generate a plot from the arrays.\n\n"
+        "## Run the analyses\nUse the ``get_max_displacement`` function sequentially, with input\nvelocity values provided by an initialized ``x`` array.\nThe results of the ``get_max_displacement`` calls are used to fill in the\ncorresponding values of the ``y`` array. Finally, call\nthe ``plot`` function to generate a plot from the arrays.\n\n"
       ]
     },
     {
