--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -148,7 +148,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Create interfaces and data transfers by specifying participant regions\n`Note`: instead of direct datamodel assignment, the command\n``setup.add_interface(...)`` could have been used instead.\nThis would have been closer to the original tutorial and is usually the recommended\napproach. However, the following provides\nan illustration of creating a datamodel object directly via the\nPySystemCoupling API.\n\n"
+        "### Create interfaces and data transfers by specifying participant regions\nCall the appropriate commands to create an interface, and force and\ndisplacement data transfers.\n\n"
       ]
     },
     {
@@ -159,14 +159,14 @@
       },
       "outputs": [],
       "source": [
-        "interface_name = \"interface-1\"\ninterface = setup.coupling_interface.create(interface_name)\ninterface.side[\"One\"].coupling_participant = mapdl_part_name\ninterface.side[\"One\"].region_list = [\"FSIN_1\"]\ninterface.side[\"Two\"].coupling_participant = fluent_part_name\ninterface.side[\"Two\"].region_list = [\"wall_deforming\"]\n\n# Use commands to add data transfers\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
+        "interface_name = setup.add_interface(\n    side_one_participant = mapdl_part_name, side_one_regions = ['FSIN_1'],\n    side_two_participant = fluent_part_name, side_two_regions = ['wall_deforming'])\n\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Verify creation of interface and data transfers\nCoupling interface exists:\n\n"
+        "### Verify creation of interface and data transfers\nConfirm the coupling interface exists:\n\n"
       ]
     },
     {
@@ -184,7 +184,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Coupling interface state. Note the \"FORC\" and \"displacement\"\n``data_transfer`` child objects:\n\n"
+        "Examine the coupling interface state. Note the ``\"FORC\"`` and ``\"displacement\"``\n``data_transfer`` child objects:\n\n"
       ]
     },
     {
@@ -497,7 +497,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Additional settings changes\n\nExamine \"Force\" data transfer.\n\n"
+        "## Additional settings changes\n\nExamine ``\"Force\"`` data transfer.\n\n"
       ]
     },
     {
@@ -515,7 +515,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Change a setting in the \"Force\" data transfer, and increase the\nminimum iterations value in ``solutions_control`` from its default\nvalue of 1.\n\n"
+        "Change a setting in the ``\"Force\"`` data transfer, and increase the\nminimum iterations value in ``solutions_control`` from its default\nvalue of 1.\n\n"
       ]
     },
     {
