clean up doc style issues

--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -22,7 +22,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Set up example\nSetting up this example consists of performing imports, downloading\ninput files, preparing the directory structure, and launching System Couping.\n\n## Perform required imports\nImport the ``ansys-systemcoupling-core`` package and other required packages.\n\n"
+        "# Set up example\nSetting up this example consists of performing imports, downloading\ninput files, preparing the directory structure, and launching System Coupling.\n\n## Perform required imports\nImport the ``ansys-systemcoupling-core`` package and other required packages.\n\n"
       ]
     },
     {
@@ -94,7 +94,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Create analysis\nCreating the analysis consists of accessing the ``setup`` API,\nloading particpants, creating and verifying both interfaces and\ndata transfers, querying for setup errors, and modifying settings.\n\n## Access the ``setup`` API\n\n"
+        "# Create analysis\nCreating the analysis consists of accessing the ``setup`` API,\nloading participants, creating and verifying both interfaces and\ndata transfers, querying for setup errors, and modifying settings.\n\n## Access the ``setup`` API\n\n"
       ]
     },
     {
@@ -184,7 +184,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Examine the coupling interface state. Note that\n``data_transfer`` child objects exuist for ``\"displacement\"``\nand ``\"FORC\"``.\n\n"
+        "Examine the coupling interface state. Note that\n``data_transfer`` child objects exist for ``\"displacement\"``\nand ``\"FORC\"``.\n\n"
       ]
     },
     {
@@ -425,7 +425,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Run solution\nThe System Coupling server's *stdout* and *stderr* output is not shown\nin PySystemCoupling by default. To see it, turn output streaming on.\n\n"
+        "# Run solution\nThe System Coupling server's ``stdout`` and ``stderr`` output is not shown\nin PySystemCoupling by default. To see it, turn output streaming on.\n\n"
       ]
     },
     {
