--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -159,7 +159,7 @@
       },
       "outputs": [],
       "source": [
-        "x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
+        "x = np.array([5.0, 10.0, 15.0, 20.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
       ]
     }
   ],
