fix issue with parametric e.g. - Fluent case not being saved!

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "def set_inlet_velocity(working_dir, inlet_velocity):\n  with pyfluent.launch_fluent(precision=\"double\", processor_count=2) as session:\n      case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n      session.file.read(file_type=\"case\", file_name=case_file)\n      session.setup.boundary_conditions.velocity_inlet[\n          \"wall_inlet\"\n      ].vmag.value = inlet_velocity\n      session.tui.file.write_case(case_file)\n\n  print(f\"Inlet velocity is set to {inlet_velocity}\")"
+        "def set_inlet_velocity(working_dir, inlet_velocity):\n  with pyfluent.launch_fluent(precision=\"double\", processor_count=2) as session:\n      case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n      session.file.read(file_type=\"case\", file_name=case_file)\n      session.setup.boundary_conditions.velocity_inlet[\n          \"wall_inlet\"\n      ].vmag.value = inlet_velocity\n      session.tui.file.write_case(case_file, \"yes\")\n\n  print(f\"Inlet velocity is set to {inlet_velocity}\")"
       ]
     },
     {
@@ -105,7 +105,7 @@
       },
       "outputs": [],
       "source": [
-        "def extract_max_displacement(working_dir):\n  print(\"Extracting max displacement value\")\n  model = pydpf.Model(os.path.join(working_dir, \"Mapdl\", \"file.rst\"))\n  displacements = model.results.displacement()\n  fields = displacements.outputs.fields_container()\n  value = max([v[0] for v in fields[0].data])\n  print(\"Max displacement value = \" + str(value))\n  return value"
+        "def extract_max_displacement(working_dir):\n  print(\"Extracting max displacement value\")\n  model = pydpf.Model(os.path.join(working_dir, \"Mapdl\", \"file.rst\"))\n  displacements = model.results.displacement()\n  fields = displacements.outputs.fields_container()\n  value = max([v[0] for v in fields[0].data])\n  print(f\"Max displacement value = {value}\")\n  return value"
       ]
     },
     {
@@ -159,7 +159,7 @@
       },
       "outputs": [],
       "source": [
-        "x = np.array([5.0, 10.0, 15.0, 20.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
+        "x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
       ]
     }
   ],
