rerun sphinx examples

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -33,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\n\nimport matplotlib.pyplot as plt\nimport numpy as np\n\nimport ansys.dpf.core as pydpf\nimport ansys.fluent.core as pyfluent\nimport ansys.systemcoupling.core as pysyc\n\nfrom ansys.systemcoupling.core import examples"
+        "import os\n\nimport matplotlib.pyplot as plt\nimport numpy as np\n\nimport ansys.dpf.core as pydpf\nimport ansys.fluent.core as pyfluent\nimport ansys.systemcoupling.core as pysyc\nfrom ansys.systemcoupling.core.syc_version import SYC_VERSION_DOT\n\nfrom ansys.systemcoupling.core import examples"
       ]
     },
     {
@@ -69,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "def set_inlet_velocity(working_dir, inlet_velocity):\n  with pyfluent.launch_fluent(precision=\"double\", processor_count=2) as session:\n      case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n      session.file.read(file_type=\"case\", file_name=case_file)\n      session.setup.boundary_conditions.velocity_inlet[\n          \"wall_inlet\"\n      ].vmag.value = inlet_velocity\n      session.tui.file.write_case(case_file, \"yes\")\n\n  print(f\"Inlet velocity is set to {inlet_velocity}\")"
+        "def set_inlet_velocity(working_dir, inlet_velocity):\n  with pyfluent.launch_fluent(product_version=f\"{SYC_VERSION_DOT}.0\",\n                              precision=\"double\",\n                              processor_count=2) as session:\n      case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n      session.file.read(file_type=\"case\", file_name=case_file)\n      session.setup.boundary_conditions.velocity_inlet[\n          \"wall_inlet\"\n      ].vmag.value = inlet_velocity\n      session.tui.file.write_case(case_file, \"yes\")\n\n  print(f\"Inlet velocity is set to {inlet_velocity}\")"
       ]
     },
     {
