Update Sphinx Gallery examples and include new heating_tank_fmu

--- a/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
+++ b/doc/source/examples/00-systemcoupling/oscillating_plate.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\nfrom pprint import pprint\nimport ansys.systemcoupling.core as pysystemcoupling\nfrom ansys.systemcoupling.core import examples"
+        "import os\nfrom pprint import pprint\n\nimport ansys.systemcoupling.core as pysystemcoupling\nfrom ansys.systemcoupling.core import examples"
       ]
     },
     {
@@ -148,7 +148,7 @@
       },
       "outputs": [],
       "source": [
-        "interface_name = setup.add_interface(\n    side_one_participant = mapdl_part_name, side_one_regions = ['FSIN_1'],\n    side_two_participant = fluent_part_name, side_two_regions = ['wall_deforming'])\n\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
+        "interface_name = setup.add_interface(\n    side_one_participant=mapdl_part_name,\n    side_one_regions=[\"FSIN_1\"],\n    side_two_participant=fluent_part_name,\n    side_two_regions=[\"wall_deforming\"],\n)\n\nforce_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"One\",\n    side_one_variable=\"FORC\",\n    side_two_variable=\"force\",\n)\n\ndisp_transfer_name = setup.add_data_transfer(\n    interface=interface_name,\n    target_side=\"Two\",\n    side_one_variable=\"INCD\",\n    side_two_variable=\"displacement\",\n)"
       ]
     },
     {
@@ -596,7 +596,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
