rerun parametric_sweep to remove Fluent warning

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "def set_inlet_velocity(working_dir, inlet_velocity):\n    with pyfluent.launch_fluent(\n        product_version=f\"{SYC_VERSION_DOT}.0\", precision=\"double\", processor_count=2\n    ) as session:\n        case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n        session.file.read(file_type=\"case\", file_name=case_file)\n        session.setup.boundary_conditions.velocity_inlet[\n            \"wall_inlet\"\n        ].momentum.velocity = inlet_velocity\n        session.tui.file.write_case(case_file, \"yes\")\n\n    print(f\"Inlet velocity is set to {inlet_velocity}\")"
+        "def set_inlet_velocity(working_dir, inlet_velocity):\n    with pyfluent.launch_fluent(\n        product_version=f\"{SYC_VERSION_DOT}.0\", precision=\"double\", processor_count=2\n    ) as session:\n        case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n        session.file.read(file_type=\"case\", file_name=case_file)\n        session.setup.boundary_conditions.velocity_inlet[\n            \"wall_inlet\"\n        ].momentum.velocity = inlet_velocity\n        session.file.write(file_type=\"case\", file_name=case_file)\n\n    print(f\"Inlet velocity is set to {inlet_velocity}\")"
       ]
     },
     {
